--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 	<link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,10 +23,12 @@
 	<div id="card">
 		<div id="card-inside">
 			<div class="wrap">
-				<center><p class="animated infinite wobble"><b><u>Happy Birthday Anjali!</b></u></p><center>
-				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco &nbsp;<i class="em-svg em-blush"></i></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-				 </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
+				<center><p class="animated infinite wobble"><b><u>Happy Birthday Diah Yulia Anggreani!</b></u></p><center>
+				<div id="teks">
+					<p class="teks"></p>
+					<p class="teks"></p>
+				</div>
+				<p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
@@ -69,12 +72,16 @@
 			<div class="card-front_inside">
 				<br> <br> <br>
 				<div class="polaroid">
-					<div class="img" style="background-image: url('https://static.vecteezy.com/system/resources/previews/000/608/881/original/heart-flat-icon-vector.jpg')"></div>
-				</div>
+					<div class="img">
+						<video id="player" playsinline controls data-poster="css/foto.jpg">
+							<source src="css/video.mp4" type="video/mp4" />
+						  </video>
+					</div>
 				<div class="shadow"></div>
 			</div>
 		</div>
 	</div>
+	<script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
 	<script  src="js/index.js"></script>
 </body>
 </html>
